# hackaton_rzd

./: README.md  hackaton (1).ipynb  pyproject.toml  server.py
html/: index.html
tmp/: processed_traffic_video.avi
