[tool.poetry]
name = "hackaton"
version = "0.1.0"
description = ""
authors = ["= <support@onlyfans.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiohttp = "^3.10.10"
opencv-python = "^4.10.0.84"
pydantic = "^2.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
